# amhello

./: .gitignore  Makefile.am  configure.ac  md2html.template  pre-commit  readme.md
amhello/: Makefile.am  amhello.c  main.c
include/: Makefile.am  libamhello.h
lib/: Makefile.am  libamhello.c  libamhijack.c  qr.c
makepkg/: .gitignore  PKGBUILD
